fix: spacing

--- a/frontend/src/components/Hero/hero.scss
+++ b/frontend/src/components/Hero/hero.scss
@@ -17,7 +17,7 @@ header {
 
 		@include breakpoint-min(lg) {
 			padding-top: 18vh;
-			padding-bottom: 23vh;
+			padding-bottom: 27vh;
 		}
 
 		.display-1,
@@ -29,10 +29,11 @@ header {
 		.display-1 {
 			font-size: $h4-font-size;
 			margin-bottom: rem(8);
-			line-height: 1.50;
+			line-height: 1;
 
 			@include breakpoint-max(lg) {
 				width: 15ch;
+				line-height: 1.5;
 			}
 
 			@include breakpoint-min(md) {
@@ -43,7 +44,7 @@ header {
 		.subtitle {
 			font-size: $small;
 			font-weight: $fw-medium;
-			line-height: 1.75;
+			line-height: 24px;
 
 			@include breakpoint-max(lg) {
 				width: 35ch;
@@ -55,7 +56,7 @@ header {
 		}
 
 		.hero-search {
-			margin-top: rem(40);
+			margin-top: rem(30);
 
 			.search {
 				flex: 1;
@@ -76,7 +77,7 @@ header {
 				}
 			}
 
-			@include breakpoint-min(md) {
+			@include breakpoint-min(lg) {
 				width: 863px;
 				margin-left: auto;
 				margin-right: auto;
